# s-top

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  REPO_EXPOSURE_AUDIT.md  REPO_EXPOSURE_PLAN.md  SECURITY.md  SUPPORT.md  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-packages.yml  release.yml
docs/screenshots/: SHOTLIST.md
recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
src/: app.rs  cli.rs  config.rs  main.rs
src/collector/: command.rs  mod.rs
src/model/: aggregate.rs  mod.rs  parse.rs  types.rs
src/ui/: mod.rs  theme.rs
