[package]
name = "sqtop"
version = "0.1.8"
edition = "2024"
description = "Interactive terminal monitor for Slurm clusters"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Wubeizhongxinghua/s-top"
homepage = "https://github.com/Wubeizhongxinghua/s-top"
keywords = ["slurm", "tui", "hpc", "cluster", "monitoring"]
categories = ["command-line-utilities"]
include = [
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "README.zh-CN.md",
  "LICENSE",
  "config.example.toml",
  "docs/screenshots/*.png",
  "docs/screenshots/SHOTLIST.md",
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "6.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
